2002-12-02  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/standard/line.c: Small but important fixes to the line
	gap code.

	* lib/dia_xml.h: 
	* lib/dia_xml.c (diaXmlNewChild): 
	* app/load_save.c (diagram_data_write_doc, write_objects): Simple
	XML prettyprinting wrapper.

2002-12-03  Steffen Macke <sdteffen@web.de>

	* shapes/Cisco/Makefile.am:
	* shapes/Cisco/*.shape: finished conversion of Cisco icons
	to *.png
	
2002-12-02  Steffen Macke <sdteffen@web.de>

	* doc/en/Makefile.am:
	* doc/en/usage-objects.sgml:
	* doc/en/graphics/line_icon.png: (new) added line icon
	
2002-12-02  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* objects/standard/line.c: Binary search object edge line gap.

2002-12-01  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* configure.in: Added Cisco makefile, sorted Makefiles list.

	* shapes/Makefile.am (SUBDIRS): Added Cisco dir

	* configure.in: Now checks for availability of PangoFT2 and
	FreeType, raising an error if not found.

	* app/Makefile.am (dia_core_files): Adding diapsft2renderer from
	Hans.

2002-12-01  Steffen Macke <sdteffen@web.de>
	
	* doc/en/usage-loadsave.sgml: updated information on import
	and export formats
	
2002-11-28  Lars Clausen  <Lars R. Clausen <lrclause@cs.uiuc.edu>>

	* app/commands.c (edit_copy_callback): Freeing copy_list.

2002-11-28  Steffen Macke <sdteffen@web.de>
	
	* app/render_libart.c: art_config.h was included twice

2002-11-27  Lars Clausen  <lrclause@cs.uiuc.edu>

	* sheets/.cvsignore: More ignorance.

	* lib/diagdkrenderer.c (draw_string): Removed silly #ifdef 1.

	* lib/prop_widgets.h: Two (currently unused) settings for frame
	foldability.

	* lib/prop_widgets.c (frame_beginprop_get_widget): Frames are now
	(by default) foldable. 

	* lib/propinternals.h: 
	* lib/propdialogs.c (prop_dialog_add_raw_with_flags): Way to add
	widgets in a more controlled manner.

	* objects/standard/line.c (line_update_data): Line gap things
	inserted.  Can do xeyes now:)
